# Cubic-Curve-Trajectory-Planning

./: CMakeLists.txt  CubicCurveTrajectoryPlanning.cpp  CubicCurveTrajectoryPlanning.h  README.md  main.cpp  test  山萝卜学习报告：单电机三次曲线轨迹跟踪.md
